--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,24 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>Tech Formations</ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-content class="auth-form">
+  <h1>Welcome to Tech Formations</h1>
+  <ion-grid>
+    <ion-row>
+      <ion-col class="ion-align-self-center">
+        <br/>
+        <br/>
+        <br/>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+        <ion-button [routerLink]="['/login']" expand="block" color="danger">Sign In</ion-button>
+        <br/>
+        <span class="divider line one-line">or </span>
+        <span class="already">Create Account</span>
+        <br/>
+        <ion-button [routerLink]="['/registration']" expand="block" color="primary">Register</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
